--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "3.x",
 	 "oauth": "~0.9.10",
 	  "passport": "~0.1.17",
-	  "passport-fitbit": "~0.1.2"
+	  "passport-fitbit": "~0.1.2",
+	  "mongoose": "~3.8.3"
   }
 }
